syntax = "proto3";

package proto;

option go_package = "internal/proto";

message CreateCardSecretRequest {
  string CardholderName = 1;
  string Type = 2;
  string ExpireDate = 3;
  string ValidFrom = 4;
  string Additional_data = 5;
  int64 ID = 6;
  int64 UserID = 7;
  string Number = 8;
  string SecretCode = 9;
}

message UpdateCardSecretRequest {
  string CardholderName = 1;
  string Type = 2;
  string ExpireDate = 3;
  string ValidFrom = 4;
  string Additional_data = 5;
  int64 ID = 6;
  int64 UserID = 7;
  string Number = 8;
  string SecretCode = 9;
}

message SecretCardResponse {
  int64 ID = 6;
}

message CardSecretRequest {
  string Login = 1;
  string Password = 2;
}

message DeleteCardSecretRequest {
  int64 Id = 1;
  int64 UserID = 2;
}

service CardSecretService {
  rpc CreateCardSecret(CreateCardSecretRequest) returns (SecretCardResponse);
  rpc UpdateCardSecret(UpdateCardSecretRequest) returns (SecretCardResponse);
  rpc DeleteCardSecret(DeleteCardSecretRequest) returns (SecretCardResponse);
}
