syntax = "proto3";

package proto;

option go_package = "internal/proto";

message CreateLoginSecretRequest {
  string Name = 1;
  string Username = 2;
  string Website = 3;
  string Password = 4;
  string Additional_data = 5;
}

message UpdateLoginSecretRequest {
  string Name = 1;
  string Username = 2;
  string Website = 3;
  string Password = 4;
  string Additional_data = 5;
  int64 ID = 6;
}

message SecretResponse {}

message LoginRequest {
  string Login = 1;
  string Password = 2;
}

message DeleteLoginSecretRequest {
  int64 Id = 1;
}

service LoginService {
  rpc CreateLoginSecret(CreateLoginSecretRequest) returns (SecretResponse);
  rpc UpdateLoginSecret(UpdateLoginSecretRequest) returns (SecretResponse);
  rpc DeleteLoginSecret(DeleteLoginSecretRequest) returns (SecretResponse);
}
